--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Sarah Crack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -24,10 +25,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" class="stylesheet" />
-    <title>Document</title>
   </head>
   <body>
-    <h1 class="bg-warning">Hello World</h1>
-    <p>How are you today? 😎</p>
+    <div class="homepage">
+      <div class="hero border border-warning">
+        <h1>SARAH CRACK</h1>
+        <p>Amateur photographer based in London 📷</p>
+      </div>
+    </div>
   </body>
 </html>
