change styling on hero section

--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
     <link rel="stylesheet" href="src/styles.css" class="stylesheet" />
   </head>
   <body>
-    <div class="homepage">
-      <div class="hero border border-warning">
+    <div class="homepage border border-warning border-5">
+      <div class="hero">
+        <p class="hello">hello, hello, hello... I'm</p>
         <h1>SARAH CRACK</h1>
-        <p>Amateur photographer based in London 📷</p>
+        <h2 class="mb-5">Amateur photographer based in London 📷</h2>
+        <div>
+          <a href="" class="btn btn-branding">Contact Me</a>
+        </div>
       </div>
     </div>
   </body>
