intergrated homepage content

--- a/index.html
+++ b/index.html
@@ -27,13 +27,61 @@
     <link rel="stylesheet" href="src/styles.css" class="stylesheet" />
   </head>
   <body>
-    <div class="homepage border border-warning border-5">
-      <div class="hero">
+    <div class="homepage">
+      <div class="hero border border-secondary border-5">
         <p class="hello">hello, hello, hello... I'm</p>
         <h1>SARAH CRACK</h1>
         <h2 class="mb-5">Amateur photographer based in London 📷</h2>
         <div>
           <a href="" class="btn btn-branding">Contact Me</a>
+        </div>
+      </div>
+      <p class="text-center m-5">
+        Some images I have loved working on with my old Lumix GX7 💛
+      </p>
+      <div class="container">
+        <div class="row mb-2">
+          <div
+            class="col-sm-4 text-center btn btn-light border border-secondary border-4 d-none d-md-block photo-album-title"
+          >
+            <a href="" class="photo-album-links">Travel</a>
+          </div>
+          <div
+            class="col-sm-4 text-center btn btn-light border border-secondary border-4 d-none d-md-block photo-album-title"
+          >
+            <a href="" class="photo-album-links">London Town</a>
+          </div>
+          <div
+            class="col-sm-4 text-center btn btn-light border border-secondary border-4 d-none d-md-block photo-album-title"
+          >
+            <a href="" class="photo-album-links">Random</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <a href=""
+              ><img
+                src="images/moscow.JPG"
+                class="img-fluid p-2 shadow rounded mb-5"
+                alt="moscow"
+            /></a>
+          </div>
+          <div class="col-sm-4">
+            <a href=""
+              ><img
+                src="images/oxford-circus.JPG"
+                class="img-fluid p-2 shadow rounded mb-5"
+                alt="oxford street"
+            /></a>
+          </div>
+          <div class="col-sm-4">
+            <a href=""
+              ><img
+                src="images/peckham-levels.JPG"
+                class="img-fluid p-2 shadow rounded mb-5"
+                alt="peckham levels"
+            /></a>
+          </div>
         </div>
       </div>
     </div>
