changed responsive parameters

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
       <div class="container">
         <div class="row mb-2">
           <div
-            class="col-sm-4 text-center btn btn-light border border-secondary border-4 d-none d-md-block photo-album-title"
+            class="col-sm-4 text-center btn btn-light border border-secondary border-3 d-none d-sm-block photo-album-title"
           >
             <a href="" class="photo-album-links">Travel</a>
           </div>
           <div
-            class="col-sm-4 text-center btn btn-light border border-secondary border-4 d-none d-md-block photo-album-title"
+            class="col-sm-4 text-center btn btn-light border border-secondary border-3 d-none d-sm-block photo-album-title"
           >
             <a href="" class="photo-album-links">London Town</a>
           </div>
           <div
-            class="col-sm-4 text-center btn btn-light border border-secondary border-4 d-none d-md-block photo-album-title"
+            class="col-sm-4 text-center btn btn-light border border-secondary border-3 d-none d-sm-block photo-album-title"
           >
             <a href="" class="photo-album-links">Random</a>
           </div>
