created Photos page

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="src/styles.css" class="stylesheet" />
   </head>
   <body>
-    <div class="about-hero container">
+    <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
           <div class="about-hero-content">
