Added photos to photo page

--- a/photos.html
+++ b/photos.html
@@ -54,6 +54,144 @@
             />
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              src="images/tanzania-elephants.jpg"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/tanzania-giraffe.jpg"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/tanzania-lion.jpg"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              src="images/tanzania-litle-owl.jpg"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/moscow-dark.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/moscow-snow.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              src="images/london-oxford-circus.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/london-bike-blur.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/london-great-eastern-street.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              src="images/london-taxi.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/london-wall.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/london-blur.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              src="images/charlston-house-flowers.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/charlston-house-lilly.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/charlston-house-statue.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              src="images/silhouette.png"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/lights.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/pink-duck.JPG"
+              class="img-fluid p-2 shadow rounded mb-5"
+              alt=""
+            />
+          </div>
+        </div>
       </div>
     </div>
   </body>
