--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-hero-content">
+          <div class="content">
             <h1 class="mb-5">Hi, I'm Sarah</h1>
             <h2 class="mb-3">Budding photographer based in London 🇬🇧</h2>
             <p>
