changed styling on homepage

--- a/index.html
+++ b/index.html
@@ -40,26 +40,10 @@
         Some images I have loved working on with my old Lumix GX7 💛
       </p>
       <div class="container">
-        <div class="row mb-2">
-          <div
-            class="col-sm-4 text-center btn btn-light border border-secondary border-3 d-none d-sm-block photo-album-title"
-          >
-            <a href="" class="photo-album-links">Travel</a>
-          </div>
-          <div
-            class="col-sm-4 text-center btn btn-light border border-secondary border-3 d-none d-sm-block photo-album-title"
-          >
-            <a href="" class="photo-album-links">London Town</a>
-          </div>
-          <div
-            class="col-sm-4 text-center btn btn-light border border-secondary border-3 d-none d-sm-block photo-album-title"
-          >
-            <a href="" class="photo-album-links">Random</a>
-          </div>
-        </div>
         <div class="row">
           <div class="col-sm-4">
-            <a href=""
+            <p class="text-center">Travel</p>
+            <a href="photos.html"
               ><img
                 src="images/moscow.JPG"
                 class="img-fluid p-2 shadow rounded mb-5"
@@ -67,7 +51,8 @@
             /></a>
           </div>
           <div class="col-sm-4">
-            <a href=""
+            <p class="text-center">London Town</p>
+            <a href="photos.html"
               ><img
                 src="images/oxford-circus.JPG"
                 class="img-fluid p-2 shadow rounded mb-5"
@@ -75,7 +60,8 @@
             /></a>
           </div>
           <div class="col-sm-4">
-            <a href=""
+            <p class="text-center">Random</p>
+            <a href="photos.html"
               ><img
                 src="images/peckham-levels.JPG"
                 class="img-fluid p-2 shadow rounded mb-5"
