--- a/photos.html
+++ b/photos.html
@@ -31,7 +31,7 @@
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I have been working on!</h1>
-        <div class="row">
+        <div class="row travel">
           <div class="col-md-4">
             <img
               src="images/palawan-beach.png"
@@ -54,7 +54,7 @@
             />
           </div>
         </div>
-        <div class="row">
+        <div class="row travel">
           <div class="col-md-4">
             <img
               src="images/tanzania-elephants.jpg"
@@ -77,7 +77,7 @@
             />
           </div>
         </div>
-        <div class="row">
+        <div class="row travel">
           <div class="col-md-4">
             <img
               src="images/tanzania-litle-owl.jpg"
@@ -100,7 +100,7 @@
             />
           </div>
         </div>
-        <div class="row">
+        <div class="row london">
           <div class="col-md-4">
             <img
               src="images/london-oxford-circus.JPG"
@@ -123,7 +123,7 @@
             />
           </div>
         </div>
-        <div class="row">
+        <div class="row london">
           <div class="col-md-4">
             <img
               src="images/london-taxi.JPG"
@@ -146,7 +146,7 @@
             />
           </div>
         </div>
-        <div class="row">
+        <div class="row random">
           <div class="col-md-4">
             <img
               src="images/charlston-house-flowers.JPG"
@@ -169,7 +169,7 @@
             />
           </div>
         </div>
-        <div class="row">
+        <div class="row random">
           <div class="col-md-4">
             <img
               src="images/silhouette.png"
