updated contact page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>SARAH CRACK</h1>
         <h2 class="mb-5">Amateur photographer based in London 📷</h2>
         <div>
-          <a href="" class="btn btn-branding">Contact Me</a>
+          <a href="contact.html" class="btn btn-branding">Get in touch</a>
         </div>
       </div>
       <p class="text-center m-5">
