added anchor links to index page

--- a/contact.html
+++ b/contact.html
@@ -30,13 +30,17 @@
   <body>
     <div class="content-container container">
       <div class="content text-center">
-        <h1 class="mb-5">Let's get in touch!</h1>
+        <a href="index.html"> <h1 class="mb-5">Let's get in touch!</h1></a>
         <h3>Email</h3>
-        <a href="mailto:sarah@gmail.com">sarah@gmail.com</a>
+        <p>
+          <a href="mailto:sarah@gmail.com">sarah@gmail.com</a>
+        </p>
         <div class="row"></div>
         <br />
         <h3>
-          <a href=""> <i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/s_crackerjack/" target="_blank">
+            <i class="fab fa-instagram"></i
+          ></a>
           <a href=""> <i class="fab fa-facebook-square"></i></a>
         </h3>
       </div>
