--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row">
           <div class="col-sm-4">
             <p class="text-center">Travel</p>
-            <a href="photos.html"
+            <a href="photos.html#travel"
               ><img
                 src="images/moscow.JPG"
                 class="img-fluid p-2 shadow rounded mb-5"
@@ -52,7 +52,7 @@
           </div>
           <div class="col-sm-4">
             <p class="text-center">London Town</p>
-            <a href="photos.html"
+            <a href="photos.html#london"
               ><img
                 src="images/oxford-circus.JPG"
                 class="img-fluid p-2 shadow rounded mb-5"
@@ -61,7 +61,7 @@
           </div>
           <div class="col-sm-4">
             <p class="text-center">Random</p>
-            <a href="photos.html"
+            <a href="photos.html#random"
               ><img
                 src="images/peckham-levels.JPG"
                 class="img-fluid p-2 shadow rounded mb-5"
