added navbar on homepage

--- a/about.html
+++ b/about.html
@@ -44,7 +44,9 @@
               live with with my husband and little girl in beautiful South East
               London.
             </p>
-            <a href="" class="btn btn-branding">Check out my photos</a>
+            <a href="photos.html" class="btn btn-branding"
+              >Check out my photos</a
+            >
           </div>
         </div>
         <div class="col-lg-6">
