--- a/index.html
+++ b/index.html
@@ -27,8 +27,29 @@
     <link rel="stylesheet" href="src/styles.css" class="stylesheet" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <p class="border border-dark border-3 p-1">
+          <a href="index.html">SC</a>
+        </p>
+        <ul>
+          <li class="active">
+            <a href="/index.html"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/photos.html">Photos</a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="homepage">
-      <div class="hero border border-secondary border-5">
+      <div class="hero border border-dark border-5">
         <p class="hello">hello, hello, hello... I'm</p>
         <h1>SARAH CRACK</h1>
         <h2 class="mb-5">Amateur photographer based in London 📷</h2>
