Added Footer links

--- a/contact.html
+++ b/contact.html
@@ -30,19 +30,26 @@
   <body>
     <div class="content-container container">
       <div class="content text-center">
-        <a href="index.html"> <h1 class="mb-5">Let's get in touch!</h1></a>
-        <h3>Email</h3>
-        <p>
-          <a href="mailto:sarah@gmail.com">sarah@gmail.com</a>
-        </p>
-        <div class="row"></div>
-        <br />
-        <h3>
-          <a href="https://www.instagram.com/s_crackerjack/" target="_blank">
-            <i class="fab fa-instagram"></i
-          ></a>
-          <a href=""> <i class="fab fa-facebook-square"></i></a>
-        </h3>
+        <h1 class="mb-5">Let's get in touch!</h1>
+        <footer>
+          <h3>Email</h3>
+          <div class="d-flex justify-content-center">
+            <a href="mailto:sarah@gmail.com" class="email-link"
+              >sarah@gmail.com</a
+            >
+          </div>
+          <div class="social-links d-flex justify-content-center">
+            <a href="https://www.instagram.com/s_crackerjack/" target="_blank">
+              <i class="fab fa-instagram"></i
+            ></a>
+            <a href=""> <i class="fab fa-facebook-square"></i></a>
+            <a
+              href="https://github.com/sarahcrack/photography-project"
+              target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
