--- a/index.html
+++ b/index.html
@@ -91,6 +91,24 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center">
+          <a href="mailto:sarah@gmail.com" class="email-link"
+            >sarah@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.instagram.com/s_crackerjack/" target="_blank">
+            <i class="fab fa-instagram"></i
+          ></a>
+          <a href=""> <i class="fab fa-facebook-square"></i></a>
+          <a
+            href="https://github.com/sarahcrack/photography-project"
+            target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
