Added navbar to all pages

--- a/about.html
+++ b/about.html
@@ -27,6 +27,27 @@
     <link rel="stylesheet" href="src/styles.css" class="stylesheet" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <p class="border border-dark border-3 p-1">
+          <a href="index.html" alt="Sarah logo" title="Homepage">SC</a>
+        </p>
+        <ul>
+          <li>
+            <a href="/index.html" title="Homepage"> Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="About Sarah">About</a>
+          </li>
+          <li>
+            <a href="/photos.html" title="Sarah's photos">Photos</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Sarah">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -53,7 +74,6 @@
           <img src="images/ireland.jpg" class="img-fluid p-2 shadow" alt="" />
         </div>
       </div>
-      <a href="index.html">back to homepage</a>
     </div>
   </body>
 </html>
