--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Sarah Crack</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Sarah is an amateur photographer based in London"
+    />
+    <title>Photographer - Sarah Crack</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,20 +35,20 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <p class="border border-dark border-3 p-1">
-          <a href="index.html">SC</a>
+          <a href="index.html" alt="Sarah logo" title="Homepage">SC</a>
         </p>
         <ul>
           <li class="active">
-            <a href="/index.html"> Home</a>
+            <a href="/index.html" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About Sarah">About</a>
           </li>
           <li>
-            <a href="/photos.html">Photos</a>
+            <a href="/photos.html" title="Sarah's photos">Photos</a>
           </li>
           <li>
-            <a href="/contact.html">Contact</a>
+            <a href="/contact.html" title="Contact Sarah">Contact</a>
           </li>
         </ul>
       </nav>
