--- a/photos.html
+++ b/photos.html
@@ -28,6 +28,27 @@
   </head>
 
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <p class="border border-dark border-3 p-1">
+          <a href="index.html" alt="Sarah logo" title="Homepage">SC</a>
+        </p>
+        <ul>
+          <li>
+            <a href="/index.html" title="Homepage"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Sarah">About</a>
+          </li>
+          <li class="active">
+            <a href="/photos.html" title="Sarah's photos">Photos</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Sarah">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I have been working on!</h1>
