--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>About Me</title>
+    <title>About Sarah</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -57,13 +57,12 @@
             <p>
               I very much enjoying learning new things and developing my skills.
               My two latest hobbies are coding and photography 😀 I love taking
-              photos and creating moments with my old school Lumix GX7. I
+              photos and creating memories with my old school Lumix GX7. I
               decided to create a webpage to display some of my favourite
-              pictures and have all in one place. My photography (as well as my
-              coding!) is a work in progress as I learn the intricacies of my
-              camera and how to create meaningful, as well as powerful images. I
-              live with with my husband and little girl in beautiful South East
-              London.
+              images. My photography (as well as my coding!) is a work in
+              progress as I learn the intricacies of my camera and how to create
+              meaningful and powerful images. I live with with my husband and
+              little girl in beautiful South East London.
             </p>
             <a href="photos.html" class="btn btn-branding"
               >Check out my photos</a
@@ -71,9 +70,53 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/ireland.jpg" class="img-fluid p-2 shadow" alt="" />
+          <img
+            src="images/ireland.jpg"
+            class="img-fluid p-2 shadow"
+            alt="Ireland"
+          />
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center">
+          <a href="mailto:sarah@gmail.com" class="email-link"
+            >sarah@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/s_crackerjack/"
+            target="_blank"
+            title="Instagram Profile"
+          >
+            <i class="fab fa-instagram"></i
+          ></a>
+          <a href="" target="_blank" title="Facebook profile">
+            <i class="fab fa-facebook-square"></i
+          ></a>
+          <a
+            href="https://github.com/sarahcrack/photography-project"
+            target="_blank"
+            title="GitHub profile"
+            ><i class="fab fa-github"></i
+          ></a>
+        </div>
+        <p class="text-center mt-5 text-muted text-monospace">
+          This project was coded by
+          <a
+            href="https://www.linkedin.com/in/sarah-crack-b2209195/"
+            target="_blank"
+            >Sarah Crack</a
+          >
+          and is
+          <a
+            href="https://github.com/sarahcrack/photography-project"
+            target="_blank"
+            >open-sourced</a
+          >
+          🤩
+        </p>
+      </footer>
     </div>
   </body>
 </html>
