--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Contact Me</title>
+    <title>Contact Sarah</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -60,16 +60,48 @@
             >
           </div>
           <div class="social-links d-flex justify-content-center">
-            <a href="https://www.instagram.com/s_crackerjack/" target="_blank">
+            <a
+              href="https://www.instagram.com/s_crackerjack/"
+              target="_blank"
+              title="Instagram profile"
+            >
               <i class="fab fa-instagram"></i
             ></a>
-            <a href=""> <i class="fab fa-facebook-square"></i></a>
+            <a href="" target="_blank" title="Facebook profile">
+              <i class="fab fa-facebook-square"></i
+            ></a>
             <a
               href="https://github.com/sarahcrack/photography-project"
               target="_blank"
+              title="GitHub profile"
               ><i class="fab fa-github"></i
             ></a>
           </div>
+          <p class="text-center mt-5 text-muted text-monospace">
+            This project was coded by
+            <a
+              href="https://www.linkedin.com/in/sarah-crack-b2209195/"
+              target="_blank"
+              title="linkedin Profile"
+              >Sarah Crack</a
+            >
+            and is
+            <a
+              href="https://github.com/sarahcrack/photography-project"
+              target="_blank"
+              >open-sourced</a
+            >
+            🤩
+          </p>
+          <p class="text-center text-muted text-monospace">
+            Please check out my other
+            <a
+              href="https://relaxed-ptolemy-cfea69.netlify.app/"
+              target="_blank"
+              >coding projects</a
+            >
+            👍🏼
+          </p>
         </footer>
       </div>
     </div>
