--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </div>
       <p class="text-center m-5">
-        Some images I have loved working on with my old Lumix GX7 💛
+        Some images I have loved working on with my Lumix GX7 💛
       </p>
       <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
               ><img
                 src="images/oxford-circus.JPG"
                 class="img-fluid p-2 shadow rounded mb-5"
-                alt="oxford street"
+                alt="Oxford Street London"
             /></a>
           </div>
           <div class="col-sm-4">
@@ -91,7 +91,7 @@
               ><img
                 src="images/peckham-levels.JPG"
                 class="img-fluid p-2 shadow rounded mb-5"
-                alt="peckham levels"
+                alt="Peckham Levels London"
             /></a>
           </div>
         </div>
@@ -103,16 +103,45 @@
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.instagram.com/s_crackerjack/" target="_blank">
+          <a
+            href="https://www.instagram.com/s_crackerjack/"
+            target="_blank"
+            title="Instagram Profile"
+          >
             <i class="fab fa-instagram"></i
           ></a>
-          <a href=""> <i class="fab fa-facebook-square"></i></a>
+          <a href="" target="_blank" title="Facebook profile">
+            <i class="fab fa-facebook-square"></i
+          ></a>
           <a
             href="https://github.com/sarahcrack/photography-project"
             target="_blank"
+            title="GitHub profile"
             ><i class="fab fa-github"></i
           ></a>
         </div>
+        <p class="text-center mt-5 text-muted text-monospace">
+          This project was coded by
+          <a
+            href="https://www.linkedin.com/in/sarah-crack-b2209195/"
+            target="_blank"
+            >Sarah Crack</a
+          >
+          and is
+          <a
+            href="https://github.com/sarahcrack/photography-project"
+            target="_blank"
+            >open-sourced</a
+          >
+          🤩
+        </p>
+        <p class="text-center text-muted text-monospace">
+          Please check out my other
+          <a href="https://relaxed-ptolemy-cfea69.netlify.app/" target="_blank"
+            >coding projects</a
+          >
+          👍🏼
+        </p>
       </footer>
     </div>
   </body>
