--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Photos</title>
+    <title>Sarah's Photos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -57,21 +57,21 @@
             <img
               src="images/palawan-beach.png"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Palawan Beach Philippines"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/palawan-boats.png"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Palawan Boats"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/palawan-sunset.jpg"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Palawan Sunset"
             />
           </div>
         </div>
@@ -80,21 +80,21 @@
             <img
               src="images/tanzania-elephants.jpg"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Tanzania Safari Elephants"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/tanzania-giraffe.jpg"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Tanzania Safari Giraffes"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/tanzania-lion.jpg"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Tanzania Safari Lion"
             />
           </div>
         </div>
@@ -103,21 +103,21 @@
             <img
               src="images/tanzania-litle-owl.jpg"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Tanzania Safari Owl"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/moscow-dark.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Moscow"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/moscow-snow.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Moscow Snow"
             />
           </div>
         </div>
@@ -126,21 +126,21 @@
             <img
               src="images/london-oxford-circus.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="London Oxford Street"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/london-bike-blur.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="London bike"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/london-great-eastern-street.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="London Great Eastern Street"
             />
           </div>
         </div>
@@ -149,21 +149,21 @@
             <img
               src="images/london-taxi.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="London Taxi"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/london-wall.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="London wall"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/london-blur.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="London graffiti"
             />
           </div>
         </div>
@@ -172,21 +172,21 @@
             <img
               src="images/charlston-house-flowers.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Charlston House Lewes East Sussex"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/charlston-house-lilly.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Charlston House Lewes East Sussex"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/charlston-house-statue.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Charlston House Lewes East Sussex"
             />
           </div>
         </div>
@@ -195,25 +195,65 @@
             <img
               src="images/silhouette.png"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Photography silhouette"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/lights.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Photography lighting"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/pink-duck.JPG"
               class="img-fluid p-2 shadow rounded mb-5"
-              alt=""
+              alt="Pink duck"
             />
           </div>
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center">
+          <a href="mailto:sarah@gmail.com" class="email-link"
+            >sarah@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/s_crackerjack/"
+            target="_blank"
+            title="Instagram Profile"
+          >
+            <i class="fab fa-instagram"></i
+          ></a>
+          <a href="" target="_blank" title="Facebook profile">
+            <i class="fab fa-facebook-square"></i
+          ></a>
+          <a
+            href="https://github.com/sarahcrack/photography-project"
+            target="_blank"
+            title="GitHub profile"
+            ><i class="fab fa-github"></i
+          ></a>
+        </div>
+        <p class="text-center mt-5 text-muted text-monospace">
+          This project was coded by
+          <a
+            href="https://www.linkedin.com/in/sarah-crack-b2209195/"
+            target="_blank"
+            >Sarah Crack</a
+          >
+          and is
+          <a
+            href="https://github.com/sarahcrack/photography-project"
+            target="_blank"
+            >open-sourced</a
+          >
+          🤩
+        </p>
+      </footer>
     </div>
   </body>
 </html>
