--- a/about.html
+++ b/about.html
@@ -54,15 +54,17 @@
           <div class="content">
             <h1 class="mb-5">Hi, I'm Sarah</h1>
             <h2 class="mb-3">Budding photographer based in London 🇬🇧</h2>
-            <p>
+            <br>
               I very much enjoying learning new things and developing my skills.
               My two latest hobbies are coding and photography 😀 I love taking
               photos and creating memories with my old school Lumix GX7. I
               decided to create a webpage to display some of my favourite
               images. My photography (as well as my coding!) is a work in
               progress as I learn the intricacies of my camera and how to create
-              meaningful and powerful images. I live with with my husband and
-              little girl in beautiful South East London.
+              meaningful and powerful images. Most recently I have started
+              taking Polaroids which I love! It still amazes me how a photo can
+              just come to life in your hands 🤩 I live with with my husband and
+              two tiny humans in beautiful South East London.
             </p>
             <a href="photos.html" class="btn btn-branding"
               >Check out my photos</a
@@ -79,8 +81,8 @@
       </div>
       <footer>
         <div class="d-flex justify-content-center">
-          <a href="mailto:sarah@gmail.com" class="email-link"
-            >sarah@gmail.com</a
+          <a href="mailto:sarah.l.crack@googlemail.com" class="email-link"
+            >sarah.l.crack@googlemail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
