--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
         <footer>
           <h3>Email</h3>
           <div class="d-flex justify-content-center">
-            <a href="mailto:sarah@gmail.com" class="email-link"
-              >sarah@gmail.com</a
+            <a href="mailto:sarah.l.crack@googlemail.com" class="email-link"
+              >ssarah.l.crack@googlemail.com</a
             >
           </div>
           <div class="social-links d-flex justify-content-center">
@@ -67,9 +67,13 @@
             >
               <i class="fab fa-instagram"></i
             ></a>
-            <a href="" target="_blank" title="Facebook profile">
-              <i class="fab fa-facebook-square"></i
-            ></a>
+            <a
+              href="https://www.linkedin.com/in/sarahcrack/"
+              target="_blank"
+              title="LinkedIn profile"
+            >
+              <i class="fab fa-linkedin-in"></i>
+            </a>
             <a
               href="https://github.com/sarahcrack/photography-project"
               target="_blank"
@@ -96,7 +100,7 @@
           <p class="text-center text-muted text-monospace">
             Please check out my other
             <a
-              href="https://relaxed-ptolemy-cfea69.netlify.app/"
+              href="https://bejewelled-melomakarona-db531a.netlify.app/"
               target="_blank"
               >coding projects</a
             >
