added polaroid image to About page

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     </div>
     <div class="content-container container">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 d-flex align-items-center">
           <div class="content">
             <h1 class="mb-5">Hi, I'm Sarah</h1>
             <h2 class="mb-3">Budding photographer based in London 🇬🇧</h2>
@@ -63,7 +63,11 @@
               progress as I learn the intricacies of my camera and how to create
               meaningful and powerful images. Most recently I have started
               taking Polaroids which I love! It still amazes me how a photo can
-              just come to life in your hands 🤩 I live with with my husband and
+              just come to life in your hands 🤩 
+              <br>
+              <img src="images/polaroid.png" alt="polaroid camera image" class="ml-5">
+              <br>
+              I live with with my husband and
               two tiny humans in beautiful South East London.
             </p>
             <a href="photos.html" class="btn btn-branding"
@@ -71,6 +75,8 @@
             >
           </div>
         </div>
+
+        
         <div class="col-lg-6">
           <img
             src="images/ireland.jpg"
